@@ -20,6 +20,7 @@ pytest-asyncio = "==0.9.0"
 pytest-cov = "==2.5.1"
 pytest-icdiff = "==0.0.3"
 freezegun = "*"
+dataclasses = "*"
 
 [requires]
 python_version = "3.7"
