@@ -9,9 +9,9 @@ from mod_ngarn.utils import create_table
 
 @pytest.mark.asyncio
 async def test_add_job_should_return_inserted_record():
-    await create_table()
+    queue_table = 'public.modngarn_job'
+    await create_table(queue_table)
     cnx = await get_connection()
-    queue_table = os.getenv('DBTABLE', 'modngarn_job')
     job_id = 'job-1'
     fn_name = 'fn_name'
     args = ['a', 'b']
@@ -24,20 +24,20 @@ async def test_add_job_should_return_inserted_record():
     assert res['kwargs'] == kwargs
     assert res['priority'] == 0
 
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.close()
 
 
 @pytest.mark.asyncio
 async def test_add_job_with_only_fn_name_should_store_empty_args_and_kwargs():
-    await create_table()
+    queue_table = 'public.modngarn_job'
+    await create_table(queue_table)
     cnx = await get_connection()
-    queue_table = os.getenv('DBTABLE', 'modngarn_job')
     job_id = 'job-1'
     fn_name = 'fn_name'
     await add_job(cnx, queue_table, job_id, fn_name)
 
-    res = await cnx.fetchrow(f'SELECT id, fn_name, args, kwargs, priority FROM "{queue_table}"')
+    res = await cnx.fetchrow(f'SELECT id, fn_name, args, kwargs, priority FROM {queue_table}')
 
     assert res['id'] == job_id
     assert res['fn_name'] == fn_name
@@ -45,15 +45,15 @@ async def test_add_job_with_only_fn_name_should_store_empty_args_and_kwargs():
     assert res['kwargs'] == {}
     assert res['priority'] == 0
 
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.close()
 
 
 @pytest.mark.asyncio
 async def test_add_job_should_store_all_of_parameter_as_input():
-    await create_table()
+    queue_table = 'public.modngarn_job'
+    await create_table(queue_table)
     cnx = await get_connection()
-    queue_table = os.getenv('DBTABLE', 'modngarn_job')
     job_id = 'job-1'
     fn_name = 'fn_name'
     args = ['a', 'b']
@@ -73,7 +73,7 @@ async def test_add_job_should_store_all_of_parameter_as_input():
     )
 
     res = await cnx.fetchrow(
-        f'SELECT id, fn_name, args, kwargs, priority, scheduled FROM "{queue_table}"'
+        f'SELECT id, fn_name, args, kwargs, priority, scheduled FROM {queue_table}'
     )
 
     assert res['id'] == job_id
@@ -83,7 +83,7 @@ async def test_add_job_should_store_all_of_parameter_as_input():
     assert res['priority'] == priority
     assert res['scheduled'] == schedule_time
 
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.close()
 
 
@@ -93,14 +93,14 @@ async def async_sum(first, second):
 
 @pytest.mark.asyncio
 async def test_add_job_should_convert_callable_to_string_function_name():
-    await create_table()
+    queue_table = 'public.modngarn_job'
+    await create_table(queue_table)
     cnx = await get_connection()
-    queue_table = os.getenv('DBTABLE', 'modngarn_job')
     job_id = 'job-1'
     fn_name = async_sum
     await add_job(cnx, queue_table, job_id, fn_name)
 
-    res = await cnx.fetchrow(f'SELECT id, fn_name, args, kwargs, priority FROM "{queue_table}"')
+    res = await cnx.fetchrow(f'SELECT id, fn_name, args, kwargs, priority FROM {queue_table}')
 
     assert res['id'] == job_id
     assert res['fn_name'] == 'tests.test_api.async_sum'
@@ -108,5 +108,5 @@ async def test_add_job_should_convert_callable_to_string_function_name():
     assert res['kwargs'] == {}
     assert res['priority'] == 0
 
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.close()
