@@ -8,12 +8,12 @@ from mod_ngarn.worker import JobRunner
 
 @pytest.mark.asyncio
 async def test_fetch_job_should_be_able_to_fetch_not_processed_job():
-    await create_table()
+    queue_table = 'public.modngarn_job'
+    await create_table(queue_table)
     cnx = await get_connection()
-    queue_table = os.getenv('DBTABLE', 'modngarn_job')
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     insert_query = """
-        INSERT INTO "{queue_table}" (id, fn_name, args, kwargs, scheduled, executed)
+        INSERT INTO {queue_table} (id, fn_name, args, kwargs, scheduled, executed)
         VALUES
             ('job-1', 'asycio.sleep', '[2]', '{{}}', NULL, '2018-08-10'),
             ('job-2', 'asycio.sleep', '[2]', '{{}}', NULL, '2018-08-13'),
@@ -25,18 +25,18 @@ async def test_fetch_job_should_be_able_to_fetch_not_processed_job():
     job_runner = JobRunner()
     job = await job_runner.fetch_job(cnx, queue_table)
     assert job.id == 'job-3'
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.close()
 
 
 @pytest.mark.asyncio
 async def test_fetch_job_should_be_able_to_fetch_correct_scheduled_job():
-    await create_table()
+    queue_table = 'public.modngarn_job'
+    await create_table(queue_table)
     cnx = await get_connection()
-    queue_table = os.getenv('DBTABLE', 'modngarn_job')
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     insert_query = """
-        INSERT INTO "{queue_table}" (id, fn_name, args, kwargs, scheduled, executed)
+        INSERT INTO {queue_table} (id, fn_name, args, kwargs, scheduled, executed)
         VALUES
             ('job-1', 'asycio.sleep', '[2]', '{{}}', NOW() + INTERVAL '10 minutes', NULL),
             ('job-2', 'asycio.sleep', '[2]', '{{}}', NOW() - INTERVAL '10 minutes', NULL);
@@ -47,18 +47,18 @@ async def test_fetch_job_should_be_able_to_fetch_correct_scheduled_job():
     job_runner = JobRunner()
     job = await job_runner.fetch_job(cnx, queue_table)
     assert job.id == 'job-2'
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.close()
 
 
 @pytest.mark.asyncio
 async def test_fetch_job_should_be_able_to_fetch_correct_priorities():
-    await create_table()
+    queue_table = 'public.modngarn_job'
+    await create_table(queue_table)
     cnx = await get_connection()
-    queue_table = os.getenv('DBTABLE', 'modngarn_job')
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     insert_query = """
-        INSERT INTO "{queue_table}" (id, fn_name, args, priority)
+        INSERT INTO {queue_table} (id, fn_name, args, priority)
         VALUES
             ('job-1', 'asycio.sleep', '[2]', 10),
             ('job-2', 'asycio.sleep', '[2]', 2),
@@ -70,16 +70,16 @@ async def test_fetch_job_should_be_able_to_fetch_correct_priorities():
     job_runner = JobRunner()
     job = await job_runner.fetch_job(cnx, queue_table)
     assert job.id == 'job-3'
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.close()
 
 
 @pytest.mark.asyncio
 async def test_fetch_job_should_be_fetch_only_not_claimed_job():
-    await create_table()
-    queue_table = os.getenv('DBTABLE', 'modngarn_job')
+    queue_table = 'public.modngarn_job'
+    await create_table(queue_table)
     insert_query = """
-        INSERT INTO "{queue_table}" (id, fn_name, args, priority)
+        INSERT INTO {queue_table} (id, fn_name, args, priority)
         VALUES
             ('job-1', 'asycio.sleep', '[2]', 10),
             ('job-2', 'asycio.sleep', '[2]', 2),
@@ -88,7 +88,7 @@ async def test_fetch_job_should_be_fetch_only_not_claimed_job():
         queue_table=queue_table
     )
     cnx = await get_connection()
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.execute(insert_query)
 
     # First worker fetch_job
@@ -108,7 +108,7 @@ async def test_fetch_job_should_be_fetch_only_not_claimed_job():
     assert job2.id == 'job-2'
     await tx1.commit()
     await tx2.commit()
-    await cnx.execute(f'TRUNCATE TABLE "{queue_table}";')
+    await cnx.execute(f'TRUNCATE TABLE {queue_table};')
     await cnx.close()
     await cnx1.close()
     await cnx2.close()
